# diagnose_treat_bias_llm

./: .gitignore  README.md  pyproject.toml
cpv/: __init__.py  data.py  evaluate.py  report.py
cpv/config/: __init__.py
cpv/metrics/: __init__.py  accuracy.py  bleu.py  cossim.py  rouge_l.py  skewsize.py
cpv/metrics/gender_direction/: __init__.py  gender_bias.py  gendered_list.py  sentence_lists.py
data/: README.md  fetch.ipynb  scraper.ipynb
docs/: running_cpv.md
explore/: compare_before_after.py  dataset_inspector.ipynb  dataset_stats.py  explore.md
metrics/gender_direction/: alt_sentence_lists.py
results/gender_direction/: gendered_list_ad.py  names.py
tests/: conftest.py  utils.py
tests/medmcqa_cpv/: cpv_report.md  create.py  test_medmcqa_cpv.py
tests/medqa_cpv/: cpv_report.md  create.py  test_medqa_cpv.py
tests/pubmedqa_cpv/: cpv_report.md  create.py  test_pubmedqa_cpv.py
